[gd_scene load_steps=9 format=2]

[ext_resource path="res://resource/ui/hud/torch_bar_bg.png" type="Texture" id=1]
[ext_resource path="res://resource/ui/hud/torch_bar_fill.png" type="Texture" id=2]
[ext_resource path="res://src/ui/HUD/torchStatus.gd" type="Script" id=3]
[ext_resource path="res://resource/ui/hud/heartBlack.png" type="Texture" id=4]
[ext_resource path="res://resource/ui/hud/heart.png" type="Texture" id=5]
[ext_resource path="res://src/ui/HUD/HUD.gd" type="Script" id=6]
[ext_resource path="res://resource/ui/hud/torch.png" type="Texture" id=7]
[ext_resource path="res://resource/ui/hud/TorchWithLens.png" type="Texture" id=8]

[node name="HUD" type="MarginContainer"]
anchor_right = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 84.0

[node name="Torch" type="Sprite" parent="MainContainer"]
position = Vector2( 614, 27 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Sector" type="Sprite" parent="MainContainer"]
position = Vector2( 614, 30 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="Heart1" type="TextureProgress" parent="MainContainer"]
margin_right = 64.0
margin_bottom = 64.0
max_value = 1.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="Heart2" type="TextureProgress" parent="MainContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
max_value = 1.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="Heart3" type="TextureProgress" parent="MainContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
max_value = 1.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="Heart4" type="TextureProgress" parent="MainContainer"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
max_value = 1.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="Heart5" type="TextureProgress" parent="MainContainer"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
max_value = 1.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="Bars" type="VBoxContainer" parent="MainContainer"]
margin_left = 340.0
margin_right = 588.0
margin_bottom = 64.0

[node name="Bar" type="HBoxContainer" parent="MainContainer/Bars"]
margin_right = 248.0
margin_bottom = 40.0

[node name="torchStatus" type="TextureProgress" parent="MainContainer/Bars/Bar"]
margin_right = 248.0
margin_bottom = 40.0
max_value = 3.0
step = 0.01
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
